--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@dcloudio/uni-mp-toutiao": "3.0.0-alpha-3031320220314002",
     "@dcloudio/uni-mp-weixin": "3.0.0-alpha-3031320220314002",
     "@dcloudio/uni-quickapp-webview": "3.0.0-alpha-3031320220314002",
+    "ant-design-vue": "^3.2.2",
     "lingo3d-vue": "^1.0.39",
     "vue": "^3.2.31",
     "vue-i18n": "^9.1.9",
