--- a/package.json
+++ b/package.json
@@ -44,8 +44,9 @@
     "@dcloudio/uni-mp-toutiao": "3.0.0-alpha-3031320220314002",
     "@dcloudio/uni-mp-weixin": "3.0.0-alpha-3031320220314002",
     "@dcloudio/uni-quickapp-webview": "3.0.0-alpha-3031320220314002",
-    "ant-design-vue": "^3.2.2",
+    "ant-design-vue": "^3.2.3",
     "lingo3d-vue": "^1.0.39",
+    "particles.vue3": "^2.0.6",
     "vue": "^3.2.31",
     "vue-i18n": "^9.1.9",
     "vuex": "^4.0.2"
